trying to fix images gap

--- a/style.css
+++ b/style.css
@@ -135,7 +135,8 @@ main{
 .onlyimages{
     margin-top: 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
     
 }
 .onlyimages img{
